--- a/assigment -2.ipynb
+++ b/assigment -2.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "470\n"
+      "472\n"
      ]
     }
    ],
@@ -388,7 +388,7 @@
     "L = a.split()   \n",
     "                                        \n",
     "\n",
-    "print len(l)"
+    "print len(L)"
    ]
   },
   {
